force-app/main/default/objects/OB_Archiver__ArchiveLog__c/OB_Archiver__ArchiveLog__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>