force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__EndedAt__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__EndedAt__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>