force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__Failed__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Failed__c</fullName>
    <label>Records Failed to Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>