force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__ParentDetail__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__ParentDetail__c</fullName>
    <formula>IF(
(OB_Archiver__Succeeded__c &gt; 0  || (AND( ISPICKVAL(OB_Archiver__Type__c,&quot;Unarchive&quot;), OB_Archiver__RecordCount__c&gt;0 )) || (AND( ISPICKVAL(OB_Archiver__Type__c,&quot;Export-and-download&quot;), OB_Archiver__RecordCount__c&gt;0 ))) &amp;&amp; NOT(ISBLANK(OB_Archiver__EndedAt__c)) &amp;&amp; NOT(ISPICKVAL( OB_Archiver__Type__c , &quot;Estimate&quot;))&amp;&amp; NOT(ISPICKVAL( OB_Archiver__Type__c , &quot;Export-to-external-bucket&quot;)) ,IF(ISBLANK($CustomMetadata.01I3Y000000JzWx.m0T3Y000000k9mt.NamespacePrefix),
HYPERLINK
(&quot;/apex/OwnBackup_LogsASCSVFileVF?requestId=&quot;
&amp;OB_Archiver__RequestId__c
&amp;&quot;&amp;reportType=&quot;
&amp;TEXT(OB_Archiver__Type__c)
&amp;&quot;&amp;logsType=&quot;
&amp;&quot;success&quot;
&amp;&quot;&amp;policyId=&quot;
&amp;OB_Archiver__PolicyId__r.Id
&amp;&quot;&amp;sobjectName=&quot;
&amp; OB_Archiver__SObjectName__c ,&quot;Download File&quot;),
HYPERLINK
(&quot;/apex/OB_Archiver__OwnBackup_LogsASCSVFileVF?requestId=&quot;
&amp;OB_Archiver__RequestId__c
&amp;&quot;&amp;reportType=&quot;
&amp;TEXT(OB_Archiver__Type__c)
&amp;&quot;&amp;logsType=&quot;
&amp;&quot;success&quot;
&amp;&quot;&amp;policyId=&quot;
&amp;OB_Archiver__PolicyId__r.Id
&amp;&quot;&amp;sobjectName=&quot;
&amp; OB_Archiver__SObjectName__c,&quot;Download File&quot;)), &apos;&apos;)</formula>
    <label>Execution Details</label>
    <type>Text</type>
</CustomField>