force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__PolicyId__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Archiving Policy</label>
    <referenceTo>OB_Archiver__ArchivingPolicy__c</referenceTo>
    <relationshipLabel>ArchiveLogs</relationshipLabel>
    <relationshipName>ArchiveLogs</relationshipName>
    <type>Lookup</type>
</CustomField>