force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Progress_Bar__c</fullName>
    <formula>if(  ISBLANK( OB_Archiver__EndedAt__c ) , 
  IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;,10, VALUE(OB_Archiver__Progress_Percentage__c))  &amp;
  IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;yellow&quot;,10, (100 - VALUE(OB_Archiver__Progress_Percentage__c))) &amp;
  &quot; &quot; &amp; OB_Archiver__Progress_Percentage__c &amp; &quot;%&quot;
  ,
  if( AND(OB_Archiver__Failed__c=0, OB_Archiver__Status__c &lt;&gt; &apos;Failed&apos;)  ,
    IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;,10, (100))
    ,
    if( AND(OB_Archiver__Failed__c&lt; OB_Archiver__RecordCount__c, OB_Archiver__Succeeded__c&gt;0) ,
      IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;yellow&quot;,10, (100))
      ,
      IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;,10, (100))
    )
  )&amp;&quot; 100%&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>