force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__SObjectName__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__SObjectName__c</fullName>
    <formula>IF(ISBLANK(OB_Archiver__PolicyId__r.OB_Archiver__SObjectNameFormula__c), OB_Archiver__UnarchiveObject__c ,OB_Archiver__PolicyId__r.OB_Archiver__SObjectNameFormula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SObjectName</label>
    <type>Text</type>
</CustomField>