force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__StartedAt__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__StartedAt__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>